Pelin tekstien kääntö suomeksi iconin vaihto ja ikkunan nimen vaihto

--- a/GAME/GAME.vcxproj
+++ b/GAME/GAME.vcxproj
@@ -153,6 +153,15 @@
   <ItemGroup>
     <ClCompile Include="GAME.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon1.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="GAME.rc" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
